2004-12-17  Stepan Kasal  <kasal@ucw.cz>

	* bin/autoscan.in: Open autoscan.log only after ``parse_args'';
	  so that eg. ``autoscan --help'' doesn't truncate it.

2004-12-15  Nicolas Joly  <njoly@pasteur.fr>

	* lib/autoconf/programs.m4 (_AC_FEATURE_CHECK_LENGTH): Remove
	generated conftest files.

2004-12-13  Noah Misch  <noah@cs.caltech.edu>

	* lib/autotest/general.m4 (_AT_CHECK) [--trace]: Do not enable shell
	tracing on commands with possibly-escaped newlines.
	* doc/autoconf.texi (Writing testsuite.at): Delete documentation of the
	discontinued behavior and its implications.
	* tests/autotest.at (BS-newline in command, ^BS-newline in command)
	(BSx641-newline in command, BS-BS-newline in command)
	(BSx640-newline in command, Newline-CODE-BS-newline in command)
	(Single-quote-BS-newline in command)
	(Single-quote-newline-BS-newline in command): New tests.

2004-12-13  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4 (AS_EXECUTABLE_P): Use test -f && test -x
	  on platforms where it works.
	(_AS_TEST_PREPARE): Test for ``test -x''.
	(_AS_BROKEN_TEST_PREPARE): Nuke.

2004-12-13  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4 (AS_TMPDIR): Move the trap commands ...
	* lib/autoconf/status.m4 (_AC_OUTPUT_CONFIG_STATUS): ... here;
	  give only 4-letter prefix to AS_TMPDIR, comment fixed.
	* lib/autoconf/programs.m4 (_AC_PATH_PROG_FEATURE_CHECK): Don't
	  create the temporary directory.
	(_AC_FEATURE_CHECK_LENGTH): Work in current directory.

2004-12-12  Kelley Cook  <kcook@gcc.gnu.org>

	* bin/autoheader.in: Exit if no AC_CONFIG_HEADERS was found.
	(trivial change)

2004-12-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/autoconf.texi (Limitations of Usual Tools) <expr (:)>: Typo.

2004-12-11  Noah Misch  <noah@cs.caltech.edu>

	* lib/autotest/general.m4 (_AT_CHECK) [--trace]: Rework a shell pattern
	to avoid using a negated character class.  Reported by Nicolas Joly.
	* tests/local.at (AT_CHECK_SHELL_SYNTAX): Check for similar constructs.
